/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id("buildlogic.java-conventions")
}

java {
    withSourcesJar()
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

dependencies {
    api(libs.net.byteflux.libby.bukkit)
    api(libs.net.citizensnpcs.citizensapi)
    compileOnly(libs.paperapi)
    compileOnly(libs.jsonsimple)
    compileOnly(libs.mjauthlib)
    compileOnly(libs.log4j.api)
    compileOnly(libs.log4j.core)
    compileOnly(libs.commonslang)
    compileOnly(libs.netty)
    testImplementation(libs.org.reflections.reflections)
    compileOnly(libs.it.unimi.dsi.fastutil)
    compileOnly(libs.com.comphenix.protocol.protocollib)
    compileOnly(libs.ch.ethz.globis.phtree.phtree)
    compileOnly(libs.org.joml.joml)
    compileOnly(libs.me.clip.placeholderapi)
    compileOnly(libs.com.github.milkbowl.vaultapi) {
        exclude(group = "org.bukkit", module = "bukkit")
    }
    compileOnly(libs.com.sk89q.worldguard.worldguard.bukkit)
    compileOnly(libs.net.kyori.adventure.text.minimessage)
    compileOnly(libs.net.kyori.adventure.platform.bukkit)
}

description = "citizens-main"

java {
    withSourcesJar()
}
